# VehicleWheelDetection

./: .gitignore  CMakeLists.txt
src/: Wheel.cpp  Wheel.h  main.cpp
